--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
 	<build>
 		<plugins>
 			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.3</source>
+					<target>1.1</target>
+					<encoding>utf-8</encoding>
+					<compilerArguments>
+						<bootclasspath>${settings.localRepository}/javax/microedition/cldcapi/1.1/cldcapi-1.1.jar${path.separator}${env.WTK_HOME}/javax/microedition/midpapi/2.0/midpapi-2.0.jar</bootclasspath>
+					</compilerArguments>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>com.pyx4me</groupId>
 				<artifactId>j2me-maven-plugin</artifactId>
 				<executions>
