--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,19 @@
 	<groupId>br.com.javamagazine.jme</groupId>
 	<artifactId>ambiente-jme</artifactId>
 	<version>1.0.0</version>
+	<name>ambiente-jme</name>
 	<dependencies>
 		<dependency>
 			<groupId>javax.microedition</groupId>
 			<artifactId>midpapi</artifactId>
 			<version>2.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.microedition</groupId>
 			<artifactId>cldcapi</artifactId>
 			<version>1.1</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
